WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281508
[TZone] Fix build failure when linking with Inspector::ConsoleMessage
https://bugs.webkit.org/show_bug.cgi?id=281508
Summary
[TZone] Fix build failure when linking with Inspector::ConsoleMessage
Michael Saboff
Reported
2024-10-15 11:08:21 PDT
The TZone annotated helpers need to be exported to other frameworks.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2024-10-15 11:10:05 PDT
<
rdar://137975754
>
Michael Saboff
Comment 2
2024-10-15 11:14:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35228
EWS
Comment 3
2024-10-15 14:02:56 PDT
Committed
285223@main
(31b3750247b8): <
https://commits.webkit.org/285223@main
> Reviewed commits have been landed. Closing PR #35228 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug