[TZone] Fix build failure when linking with Inspector::ConsoleMessage https://bugs.webkit.org/show_bug.cgi?id=281508 rdar://137975754

Reviewed by Yijia Huang.

Changed the TZone annotation for Inspector::ConsoleMessage to the exported version.

* Source/JavaScriptCore/inspector/ConsoleMessage.h:

Canonical link: https://commits.webkit.org/285223@main